--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ POSTGRES_DB=mydatabase
 SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/mydatabase
 SPRING_DATASOURCE_USERNAME=myuser
 SPRING_DATASOURCE_PASSWORD=mypassword
+REACT_APP_URL=http://localhost:5173
