--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,4 +2,5 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
+react.app.url=http://localhost:5173
 spring.jpa.hibernate.ddl-auto=update
